# cc-manager

./: .gitignore  Dockerfile.integration  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: integration.yml
cc_manager/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  dashboard_data.py  display.py  hook.py  hooks.py  installer.py  paths.py  registry.py  settings.py  store.py  theme.py
cc_manager/commands/: __init__.py  analyze.py  audit.py  backup.py  clean.py  completions.py  config.py  dashboard.py  diff.py  doctor.py  export_import.py  info.py  init.py  install.py  list_cmd.py  logs.py  migrate.py  pin.py  profile.py  recommend.py  reset.py  search.py  serve.py  status.py  tui.py  uninstall.py  update.py  why.py
cc_manager/dashboard/: __init__.py  app.js  index.html  style.css
cc_manager/handlers/: __init__.py  post_tool_use.py  pre_compact.py  session_end.py  session_start.py  stop.py
cc_manager/skills/: SKILL.md  cc-manager.md
cc_manager/tcss/: __init__.py
cc_manager/widgets/: __init__.py  cost_chart.py  event_log.py  header_bar.py  health_table.py  recs_widget.py  sessions_table.py  stats_bar.py  token_chart.py  tools_table.py
registry/: tools-archive.json  tools.json
scripts/: fake_claude.sh  integration_test.sh  validate_registry.py
tests/: test_app.py  test_cli.py  test_context.py  test_hook.py  test_hooks.py  test_installer.py  test_registry.py  test_settings.py  test_store.py  test_store_extra.py
tests/test_commands/: test_analyze.py  test_audit.py  test_backup.py  test_clean.py  test_completions.py  test_config.py  test_dashboard.py  test_diff.py  test_doctor.py  test_export_import.py  test_info.py  test_init.py  test_install.py  test_list.py  test_logs.py  test_migrate.py  test_pin.py  test_recommend.py  test_reset.py  test_search.py  test_serve.py  test_status.py  test_tui.py  test_uninstall.py  test_update.py  test_why.py
