[project]
name = "cc-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.14.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
cc-manager = "cc_manager.cli:app"
ccm = "cc_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
