[project]
name = "cc-manager"
version = "0.1.0"
description = "Claude Code ecosystem controller — install tools, wire hooks, track usage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Srinivas Vaddi", email = "vaddisrinivas170497@gmail.com" }]
keywords = ["claude", "claude-code", "ai", "cli", "mcp", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.14.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "textual>=0.80.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/srinivasvaddi/cc-manager"
Repository = "https://github.com/srinivasvaddi/cc-manager"
Issues = "https://github.com/srinivasvaddi/cc-manager/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.23.0"]
web = ["textual-web"]

[project.scripts]
cc-manager = "cc_manager.cli:app"
ccm = "cc_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["cc_manager", "registry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
